# CepsAPIs

./: .env-example  README.md  main.ipynb  pyproject.toml  ztest.ipynb  ztest.py
src/datasets/results/: .gitignore
src/javascript/: main.js
src/python/: main.py
src/python/classes/: APIs.py  CallsClass.py  DBData.py
src/queries/: select_ceps.sql  select_editions.sql  select_participants.sql
