[project]
name = "pyceps"
version = "1.0.0"
description = "Get data addresses from DB to scrap."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=8.37.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
